--- a/assets/css/Style-Light.css
+++ b/assets/css/Style-Light.css
@@ -1695,6 +1695,15 @@ input[type=checkbox]:checked + .label-text:before{
   -moz-box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.29);
   -webkit-box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.29);
 }
+.kitchentableList-btn{
+   color: rgb(255, 255, 255);
+   background-color: #4267B2;
+   border: none;
+   margin: 0 25px;
+   box-shadow:  0px 2px 10px 0px rgba(0, 0, 0, 0.29);
+   -moz-box-shadow:  0px 2px 10px 0px rgba(0, 0, 0, 0.29);
+   -webkit-box-shadow:  0px 2px 10px 0px rgba(0, 0, 0, 0.29);
+ }
 
 .kitchentableoff-btn{
   color: #fff;
@@ -1791,8 +1800,9 @@ input[type=checkbox]:checked + .label-text:before{
 
 .tableListKitchen{
    padding: 6px 14px;
-   margin: 6%;
-   margin-bottom: 1%;
+   margin-left: 6%;
+   margin-right: 6%;
+   margin-bottom: 6%;
    height: 160px;    
 }
 .tableList{
